// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomaticRobot Containers can still be embedded in the Steps 1`] = `
Object {
  "__TMP_MODEL__DO_NO_USE_IT": Object {},
  "child": Object {
    "child-username": "1234",
  },
  "demo": Object {
    "anotherUserName": "1234",
    "passUserName": "1234",
    "username": "1234",
  },
}
`;

exports[`AutomaticRobot event steps 1`] = `
Object {
  "container": Object {
    "__TMP_MODEL__DO_NO_USE_IT": Object {},
    "demo": Object {
      "anotherUserName": "1234",
      "passUserName": "1234",
      "username": "1234",
    },
  },
  "trigger": Object {
    "demo": Object {
      "$SELF_PASS_CUSTOMER": Object {
        "anotherUserName": "1234",
      },
      "testCustomer": Object {
        "passUserName": "1234",
      },
    },
  },
}
`;
